<resources>
    <string name="app_name">Movies APP</string>
    <string name="action_setting">Settings</string>
    <string name="name_movie">Movie Title</string>
    <string name="movie_details">Movie Details</string>
    <string name="plot">Plot Synopsis</string>
    <string name="rating">User Rating</string>
    <string name="release">Release Date</string>
    <string name="pref_sort_order_label">Sort Order</string>
    <string name="pref_sort_order_key">Sort Order</string>
    <string name="pref_most_popular">Most Popular</string>
    <string name="pref_highest_rated">Highest Rated</string>
    <string name="pref_favorite" >Favourite Movies</string>
    <string name="reviews" />
    <string name="favorute">Favorite</string>
    <string name="not_favorite">Not favorite</string>
    <string name="movie_image">movie image</string>

</resources>
