<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/view_background"
    android:orientation="vertical"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailsActivity"
    tools:showIn="@layout/activity_details"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detailsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:text="@string/name_movie"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/titleDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detailsTitle"
                android:layout_marginLeft="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:padding="@dimen/padding_layout"
                android:text="@string/name_movie"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/plotSynopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:padding="@dimen/padding_layout"
                android:text="@string/plot"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_below="@id/detailsTitle"/>
            <TextView
                android:id="@+id/plotDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:text="@string/rating"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_below="@id/plotSynopsis"/>
            <TextView
                android:id="@+id/detailsRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:padding="@dimen/padding_layout"
                android:text="@string/rating"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_below="@id/plotSynopsis"/>

            <TextView
                android:id="@+id/ratingDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:padding="@dimen/padding_layout"
                android:text="@string/rating"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_below="@id/detailsRating"/>
            <TextView
                android:id="@+id/release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:text="@string/release"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_below="@id/ratingDetails"/>
            <TextView
                android:id="@+id/releaseDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/layout_margin_top2"
                android:padding="@dimen/padding_layout"
                android:text="@string/rating"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_below="@id/release"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>